--- a/style.css
+++ b/style.css
@@ -14,3 +14,23 @@ body {
   border: 1px solid #00e1db;
   border-radius: 20px;
 }
+a {
+  font-size: 16px;
+  color: rgb(54, 54, 211);
+  font-weight: 500;
+  text-decoration: none;
+}
+a:hover {
+  color: blueviolet;
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+#search-city {
+  max-width: 700px;
+  width: 100%;
+}
+
+.input-group-append {
+  margin-right: 5px;
+}
